Issue #23757:  Only call the concrete list API for exact lists.